--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.5",
     "cheerio": "^1.0.0-rc.12",
     "chokidar": "^3.5.3",
     "dotenv": "^16.3.1",
