--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.3",
+    "puppeteer": "^22.13.0",
     "pushbullet": "^3.0.0"
   },
   "devDependencies": {
