--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.3",
     "puppeteer": "^22.13.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "pushbullet": "^3.0.0"
   },
   "devDependencies": {
