--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "cohere-ai": "^7.11.2",
+    "openai": "^4.55.3",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
