--- a/scraper/package.json
+++ b/scraper/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.3",
+    "openai": "^4.56.0",
     "puppeteer": "^22.15.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
