--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "<name>",
-  "description": "<description>",
+  "name": "local job scraper",
+  "description": "This extension scrapes job postings from various websites and links to the original posting.",
   "version": "1.0",
-  "key": "<key>",
+  "key": "lhpifmnfegimpmfnkmgnkahhfpkaakpj",
   "permissions": ["webRequest", "storage"],
   "action": {
     "default_popup": "index.html"
