--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -29,6 +29,10 @@
     {
       "resources": ["assets/icon.png"],
       "matches": ["*://*/*"]
+    },
+    {
+      "resources": ["content/content.css"],
+      "matches": ["<all_urls>"]
     }
   ],
   "icons": {
