--- a/scraper/package.json
+++ b/scraper/package.json
@@ -21,7 +21,8 @@
     "puppeteer": "^22.15.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "pushbullet": "^3.0.0"
+    "pushbullet": "^3.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
